--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,29 +1,29 @@
+{% load static %}
+
 <html>
     <head>
         <title>annabroshki's blog</title>
+		
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		
+		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         <div>
             <h1><a href="https://annabroshki.pythonanywhere.com">Anna Broshki Blog</a></h1>
         </div>
 
-        <div>
-            <p><em><strong>published: 09.12.2018, 06:34</strong></em></p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-			{% for post in posts %}
-				<div>
-					<p>published: {{ post.published_date }}</p>
-					<h1><a href="">{{ post.title }}</a></h1>
-					<p>{{ post.text|linebreaksbr }}</p>
-				</div>
-			{% endfor %}
-        </div>
-
-        <div>
-            <p><em><strong>published: 09.12.2018, 06:34</strong></em></p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
+		{% endfor %}
+		
+		<div>
+			<h1><a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">Django wiki</a></h1>
+		</div>
     </body>
 </html>
