--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,29 +1,13 @@
-{% load static %}
-
-<html>
-    <head>
-        <title>annabroshki's blog</title>
-		
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		
-		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-    <body>
-        <div>
-            <h1><a href="https://annabroshki.pythonanywhere.com">Anna Broshki Blog</a></h1>
-        </div>
-
-		{% for post in posts %}
-			<div>
-				<p>published: {{ post.published_date }}</p>
-				<h1><a href="">{{ post.title }}</a></h1>
-				<p>{{ post.text|linebreaksbr }}</p>
+{% extends 'blog/base.html' %}
+ 
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				<p>Опубликовано: {{ post.published_date }}</p>
 			</div>
-		{% endfor %}
-		
-		<div>
-			<h1><a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">Django wiki</a></h1>
+			<h1><a href="">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
 		</div>
-    </body>
-</html>
+	{% endfor %}
+{% endblock %}
